--- a/utilidades.html
+++ b/utilidades.html
@@ -45,16 +45,17 @@
         <div><h2><svg xmlns="http://www.w3.org/2000/svg" height="1.2rem" viewBox="0 -960 960 960" width="1.2rem"><path d="M560-564v-68q33-14 67.5-21t72.5-7q26 0 51 4t49 10v64q-24-9-48.5-13.5T700-600q-38 0-73 9.5T560-564Zm0 220v-68q33-14 67.5-21t72.5-7q26 0 51 4t49 10v64q-24-9-48.5-13.5T700-380q-38 0-73 9t-67 27Zm0-110v-68q33-14 67.5-21t72.5-7q26 0 51 4t49 10v64q-24-9-48.5-13.5T700-490q-38 0-73 9.5T560-454ZM260-320q47 0 91.5 10.5T440-278v-394q-41-24-87-36t-93-12q-36 0-71.5 7T120-692v396q35-12 69.5-18t70.5-6Zm260 42q44-21 88.5-31.5T700-320q36 0 70.5 6t69.5 18v-396q-33-14-68.5-21t-71.5-7q-47 0-93 12t-87 36v394Zm-40 118q-48-38-104-59t-116-21q-42 0-82.5 11T100-198q-21 11-40.5-1T40-234v-482q0-11 5.5-21T62-752q46-24 96-36t102-12q58 0 113.5 15T480-740q51-30 106.5-45T700-800q52 0 102 12t96 36q11 5 16.5 15t5.5 21v482q0 23-19.5 35t-40.5 1q-37-20-77.5-31T700-240q-60 0-116 21t-104 59ZM280-494Z"/></svg>Plataformas e Ferramentas</h2> <a aria-hidden="true" href="#intro">#intro</a></div><p class="date">atualizado no dia: 28/11/24</p>
     </div>
     <div class="menu">
-            <a>Alura</a>
-            <a>CMSP</a>
-            <a>Khan Academy</a>
-            <a>LeiaSP</a>
-            <a>Me Salva!</a>
-            <a>SPeak</a>
+            <a href="/utilidades/scripts/alura.html">Alura</a>
+            <a href="https://doritus.mmrcoss.tech/coisas">CMSP</a>
+            <a href="/utilidades/scripts/khan.html">Khan Academy</a>
+            <a href="/utilidades/scripts/leiasp.html">LeiaSP</a>
+            <a href="https://github.com/Louyslnx/ToSalvo/releases/tag/tosalvoab/latest">Me Salva!</a>
+            <a href="/utilidades/scripts/speak.html">SPeak</a>
             <a style="border-left: 5px solid; padding: 0;"></a>
             <a>Como usar</a>
             <a>Tampermonkey</a>
         </div>
+        <p><b>[ ! ] - Atenção, o CMSP necessita de uma VPN ou 4G, qualquer rede de Internet que não seja da escola</b></p>
 
     </main>
     <!-- content ends here -->
