--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </nav>
     </header>
     <div class="sub-header">
-        <a class="lang" href="./z-en/index.html">Looking for an english version? Click here. </a><div class="marquee-container"><p id="random-sentence"></p></div><div id="clock"></div>
+        <a class="lang" href="./z-en/index.html">EN</a><a class="selected-lang">PT-BR</a><div class="marquee-container"><p id="random-sentence"></p></div><div id="clock"></div>
     </div>
 
     <!--        content starts here         -->
